# Macie-Plugin-for-Wallpaper-Engine

./: .gitignore  CMakeLists.txt  README.md
MacieWallpaperEngine/MacieWallpaperEngine/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
MacieWallpaperEngine/MacieWallpaperEngine.xcodeproj/: project.pbxproj
MacieWallpaperEngine/MacieWallpaperEngine.xcodeproj/project.xcworkspace/xcuserdata/macie.xcuserdatad/: UserInterfaceState.xcuserstate
MacieWallpaperEngine/MacieWallpaperEngine.xcodeproj/xcuserdata/macie.xcuserdatad/xcschemes/: xcschememanagement.plist
MacieWallpaperEngine/MacieWallpaperEngine/Base.lproj/: Main.storyboard
include/: AVVideoRenderer.h  AppDelegate.h  AssetManager.hpp  ConfigManager.hpp  Constants.h  DesktopWindowManager.h  MainWindowController.h  PerformanceMonitor.h  PreferencesWindowController.h  ThumbnailCache.h  VideoCollectionItem.h  WallpaperEngine.hpp  WelcomeWindowController.h
src/: AppDelegate.mm  main.m
src/core/: AssetManager.cpp  ConfigManager.cpp  PerformanceMonitor.mm  ThumbnailCache.mm  WallpaperEngine.cpp
src/renderers/: AVVideoRenderer.mm  DesktopWindowManager.mm
src/ui/: MainWindowController.mm  PreferencesWindowController.m  VideoCollectionItem.m  WelcomeWindowController.m
